# gazebo_panda

./: .gitignore  README.md
franka_gazebo/: CMakeLists.txt  package.xml
franka_gazebo/config/: hqp_controller.yaml  joint_traj_controller.yaml
franka_gazebo/launch/: empty_world.launch.py  view_robot.py
franka_gazebo/models/: model.config  panda_arm.urdf  panda_arm_rbdl.urdf
franka_gazebo/worlds/: empty_world.model
gazebo_panda/: CMakeLists.txt  package.xml
hqp_controller/: CMakeLists.txt  hqp_controller_plugin.xml  package.xml
hqp_controller/include/: control_math.h  model.h  quadratic_programming.h  trajectory.h
hqp_controller/include/hqp_controller/: hqp_controller.hpp  visibility_control.h
hqp_controller/src/: hqp_controller.cpp  model.cpp  quadratic_programming.cpp  trajectory.cpp
