<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hqp_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alsrb0820@gmail.com">Mingyu Park</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>forward_command_controller</depend>
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>control_toolbox</depend>
  <build_depend>pluginlib</build_depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>urdfdom</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
